--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-website",
+  "name": "reactjs-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,17 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-icons": "^5.5.0",
-    "react-parallax-tilt": "^1.7.315",
-    "react-router-dom": "^7.10.1",
-    "react-toastify": "^11.0.5",
-    "react-typing-effect": "^2.0.5"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@tailwindcss/vite": "^4.1.17",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
